--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             color: #b00b1e;
         }
      </style>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <div id="app"></div>
@@ -58,28 +59,61 @@
         function HomePage() {
             const mahasiswa =[{
                 npm: '001',
-                nama: 'jhon'
+                nama: 'jhon',
+                hobi:["Eat","Sleep"]
             },
             {
                 npm:'002',
-                nama:'Mattide'
+                nama:'Mattide',
+                hobi:["Sleep", 'Play']
             },
             {
                 npm:'003',
-                nama: 'Bart'
+                nama: 'Bart',
+                hobi:['Music',]
             }
             ]; 
+
+            //state
+            const [like, setLike]= React.useState(0);
+            function handleClick(){
+                setLike(like + 1);
+            }
+
             return <>
                 <Header title='What' />
                 <Header title='IDC' />
                 <p>BE</p>
-                <ul>
+                <table className='table table-striped'>
+                    <thead>
+                        <tr>
+                            <th>NPM</th>
+                            <th>NAMA</th>
+                            <th>HOBI</th>
+                        </tr>
+                    </thead>
+                    <tbody>
                     {
                         mahasiswa.map((mhs)=>(
-                            <li key= {mhs.npm}>{mhs.nama}</li>
+                            <tr key={mhs.npm}>
+                                <td>{mhs.npm}</td>
+                                <td>{mhs.nama}</td>    
+                                <td>
+                                    <ul>
+                                    {
+                                        mahasiswa.map((mhs)=>(
+                                        <li>{mhs.hobi}</li>
+                                    ))
+                                    }
+                                    </ul>    
+                                </td>
+                            </tr>
                         ))
                     }
-                    </ul>
+                    </tbody>
+                </table>
+
+                <button onClick={handleClick}>Like {like} </button>
                 <Footer />
             </>;
         }
